--- a/requirements.txt
+++ b/requirements.txt
@@ -1,309 +1,182 @@
-aiohttp==3.9.3
-aiosignal==1.3.1
-annotated-types==0.6.0
-anyio==4.3.0
+anaconda-anon-usage @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_9abq1vdv2c/croot/anaconda-anon-usage_1732732441000/work
+annotated-types==0.7.0
+anyio==4.8.0
 appdirs==1.4.4
 appnope==0.1.4
+archspec @ file:///croot/archspec_1709217642129/work
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
-argparse-dataclass==2.0.0
 arrow==1.3.0
-asgiref==3.7.2
-asttokens==2.4.1
+asttokens==3.0.0
 async-lru==2.0.4
-attrs==23.2.0
-Babel==2.14.0
-backoff==2.2.1
-bcrypt==4.1.2
-beautifulsoup4==4.12.3
-bleach==6.1.0
+attrs==25.1.0
+babel==2.17.0
+beautifulsoup4==4.13.3
+biopython==1.85
+bleach==6.2.0
 blessings==1.7
 blinker==1.9.0
-Brotli==1.1.0
-build==1.1.1
-cachetools==5.3.3
+boltons @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/boltons_1699245321609/work
+Brotli @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_67j4p18ie3/croot/brotli-split_1714483158198/work
+cached-property @ file:///home/conda/feedstock_root/build_artifacts/cached_property_1615209429212/work
 cameo==0.13.6
-certifi==2024.2.2
-cffi==1.16.0
-chardet==5.2.0
-charset-normalizer==3.3.2
-chroma-hnswlib==0.7.3
-chromadb==0.4.24
-click==8.1.7
-cloud-sql-python-connector==1.9.1
+certifi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_d0mlk2yciq/croot/certifi_1738623741969/work/certifi
+cffi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_a1n4t3qsjy/croot/cffi_1726856449083/work
+charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
+click==8.1.8
 cobra==0.29.1
-coloredlogs==15.0.1
-comm==0.2.1
-conda-inject==1.3.2
-ConfigArgParse==1.7
-connection_pool==0.0.3
-contourpy==1.3.0
-cplex==22.1.1.2
-cryptography==42.0.7
-cssselect2==0.8.0
+comm==0.2.2
+conda @ file:///Users/runner/miniforge3/conda-bld/conda_1739917067783/work
+conda-anaconda-telemetry @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_42mab2m6lh/croot/conda-anaconda-telemetry_1733258972792/work
+conda-content-trust @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_78eyko59n2/croot/conda-content-trust_1714483158098/work
+conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1727775630457/work/src
+conda-package-handling @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_b5_vfr2fqi/croot/conda-package-handling_1731369042242/work
+conda_package_streaming @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_58icnlhvbg/croot/conda-package-streaming_1731366295477/work
+contourpy==1.3.1
+cryptography @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_97qpgd2gkx/croot/cryptography_1732131165709/work
 cycler==0.12.1
-dataclasses-json==0.6.4
-dataclasses-json-speakeasy==0.5.11
-debugpy==1.8.1
-decorator==5.1.1
+debugpy==1.8.12
+decorator==5.2.0
 defusedxml==0.7.1
 depinfo==2.2.0
-Deprecated==1.2.14
 diskcache==5.6.3
-distro==1.9.0
-docutils==0.21.2
-dpath==2.2.0
-emoji==2.10.1
+distro @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_b5l_bzm_c4/croot/distro_1714488255954/work
+edlib==1.3.9.post1
 Escher==1.8.1
 et_xmlfile==2.0.0
-executing==2.0.1
-faiss-cpu==1.8.0
-fastapi==0.110.0
-fastjsonschema==2.19.1
-filelock==3.13.1
-filetype==1.2.0
+executing==2.2.0
+fastjsonschema==2.21.1
 Flask==3.1.1
-flatbuffers==24.3.7
-fonttools==4.53.1
-fpdf==1.7.2
-fpdf2==2.8.3
+fonttools==4.55.3
 fqdn==1.5.1
-frozenlist==1.4.1
-fsspec==2024.2.0
+frozendict @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_f2kfyv072k/croot/frozendict_1713194840232/work
 future==1.0.0
-gitdb==4.0.12
-GitPython==3.1.44
 gnomic==1.0.1
-google-ai-generativelanguage==0.6.2
-google-api-core==2.19.0
-google-api-python-client==2.129.0
-google-auth==2.28.2
-google-auth-httplib2==0.2.0
-google-generativeai==0.5.2
-googleapis-common-protos==1.62.0
-googlemaps==4.10.0
 grako==3.18.1
-greenlet==3.0.3
-grpcio==1.64.0
-grpcio-status==1.62.2
 gurobipy==12.0.1
 h11==0.14.0
-html2text==2024.2.26
-httpcore==1.0.4
-httplib2==0.22.0
-httptools==0.6.1
-httpx==0.27.0
-huggingface-hub==0.21.4
-humanfriendly==10.0
-idna==3.6
-immutables==0.21
-importlib-metadata==6.11.0
-importlib_resources==6.1.3
+h5py @ file:///Users/runner/miniforge3/conda-bld/h5py_1739952275518/work
+httpcore==1.0.7
+httpx==0.28.1
+idna @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_2b_jn555_n/croot/idna_1714398852258/work
+importlib_resources==6.5.2
 iniconfig==2.0.0
 inspyred==1.0.3
 IProgress==0.4
-ipykernel==6.29.3
-ipython==8.22.2
+ipykernel==6.29.5
+ipython==8.32.0
 ipython-genutils==0.2.0
 ipywidgets==7.8.5
 isoduration==20.11.0
 itsdangerous==2.2.0
-jarowinkler==2.0.1
-jedi==0.19.1
-Jinja2==3.1.3
-joblib==1.3.2
-json5==0.9.22
-jsonpatch==1.33
-jsonpath-python==1.0.6
-jsonpointer==2.4
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-jupyter-events==0.9.0
-jupyter-lsp==2.2.4
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-jupyter_server==2.13.0
-jupyter_server_terminals==0.5.2
-jupyterlab==4.1.4
+jedi==0.19.2
+Jinja2==3.1.5
+joblib==1.4.2
+json5==0.10.0
+jsonpatch @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_9dcqemvl4v/croot/jsonpatch_1714483445583/work
+jsonpointer==2.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter-events==0.12.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.15.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.3.5
 jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.4
+jupyterlab_server==2.27.3
 jupyterlab_widgets==1.1.11
-kiwisolver==1.4.7
-kubernetes==29.0.0
-langchain==0.1.12
-langchain-community==0.0.28
-langchain-core==0.1.31
-langchain-openai==0.0.8
-langchain-text-splitters==0.0.1
-langdetect==1.0.9
-langsmith==0.1.24
+kiwisolver==1.4.8
 lazy-object-proxy==1.10.0
-litellm==1.35.32
-lxml==5.1.0
+libmambapy @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_04b8n3zh1z/croot/mamba-split_1734015858934/work/libmambapy
 Markdown==3.8
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.20.2
-matplotlib==3.9.2
-matplotlib-inline==0.1.6
+MarkupSafe==3.0.2
+matplotlib==3.10.0
+matplotlib-inline==0.1.7
 mdurl==0.1.2
-mistune==3.0.2
-mmh3==4.1.0
-monotonic==1.6
+menuinst @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_22o7b1xsoe/croot/menuinst_1731365278299/work
+mistune==3.1.2
 mpmath==1.3.0
-multidict==6.0.5
-mypy-extensions==1.0.0
-nbclient==0.9.0
-nbconvert==7.16.2
-nbformat==5.9.2
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.4.2
-nltk==3.8.1
-notebook==7.1.1
+notebook==7.3.2
 notebook_shim==0.2.4
 numexpr==2.10.2
-numpy==1.26.4
-oauthlib==3.2.2
-onnxruntime==1.17.1
-openai==1.24.0
+numpy @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_5fmmnmaopm/croot/numpy_and_numpy_base_1725470312793/work/dist/numpy-2.0.1-cp312-cp312-macosx_10_15_x86_64.whl#sha256=23905d096f0eb28b63c1129b60f217f0ace809119d2d252535f60acb88237b85
 openpyxl==3.1.5
-opentelemetry-api==1.23.0
-opentelemetry-exporter-otlp-proto-common==1.23.0
-opentelemetry-exporter-otlp-proto-grpc==1.23.0
-opentelemetry-instrumentation==0.44b0
-opentelemetry-instrumentation-asgi==0.44b0
-opentelemetry-instrumentation-fastapi==0.44b0
-opentelemetry-proto==1.23.0
-opentelemetry-sdk==1.23.0
-opentelemetry-semantic-conventions==0.44b0
-opentelemetry-util-http==0.44b0
 optlang==1.8.3
 ordered-set==4.1.0
-orjson==3.9.15
-outcome==1.3.0.post0
 overrides==7.7.0
-packaging==23.2
+packaging @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_af6w2d9k11/croot/packaging_1720101860461/work
 palettable==3.3.3
-pandas==2.2.2
+pandas==2.2.3
 pandocfilters==1.5.1
-parso==0.8.3
+parso==0.8.4
 pexpect==4.9.0
-pillow==10.3.0
-plac==1.4.3
-platformdirs==4.2.0
-playwright==1.41.1
-pluggy==1.5.0
-posthog==3.5.0
-prometheus_client==0.20.0
-prompt-toolkit==3.0.43
-proto-plus==1.23.0
-protobuf==4.25.3
-psutil==5.9.8
+pillow==11.0.0
+platformdirs @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/platformdirs_1701805067573/work
+pluggy @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_70ykkrsb12/croot/pluggy_1733169619735/work
+prometheus_client==0.21.1
+prompt_toolkit==3.0.50
+psutil==7.0.0
 ptyprocess==0.7.0
-PuLP==2.9.0
-pulsar-client==3.4.0
-pure-eval==0.2.2
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycparser==2.21
-pydantic==2.6.1
-pydantic_core==2.16.2
-pydyf==0.11.0
-pyee==11.0.1
-Pygments==2.17.2
-PyMySQL==1.1.0
-pyopenms==3.1.0
-pyparsing==3.1.2
-PyPDF2==3.0.1
-pyphen==0.17.2
-PyPika==0.48.9
-pyproject_hooks==1.0.0
-pysam==0.23.0
-PySocks==1.7.1
+pure_eval==0.2.3
+pycosat @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_48rgxrmler/croot/pycosat_1714511500164/work
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pydantic==2.10.6
+pydantic_core==2.27.2
+Pygments==2.19.1
+pyparsing==3.2.0
+pysam==0.22.1
+PySocks @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/pysocks_1699239289103/work
 pytest==8.3.4
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-python-iso639==2024.2.7
-python-json-logger==2.0.7
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-json-logger==3.2.1
 python-libsbml==5.20.4
-python-magic==0.4.27
-pytz==2024.1
-PyYAML==6.0.1
-pyzmq==25.1.2
-rapidfuzz==3.6.1
-referencing==0.33.0
-regex==2023.12.25
-reportlab==4.2.0
-requests==2.31.0
-requests-oauthlib==1.3.1
-reretry==0.11.8
+pytz==2024.2
+PyYAML==6.0.2
+pyzmq==26.2.1
+referencing==0.36.2
+requests @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_2eh84h3yiv/croot/requests_1730999127987/work
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.9.4
-rpds-py==0.18.0
-rsa==4.9
-ruamel.yaml==0.18.10
-ruamel.yaml.clib==0.2.12
-scikit-learn==1.6.1
-scipy==1.15.2
-seeact==0.2.6.2
-selenium==4.17.2
-Send2Trash==1.8.2
-six==1.16.0
-smart-open==7.1.0
-smmap==5.0.2
-snakemake==8.29.3
-snakemake-interface-common==1.17.4
-snakemake-interface-executor-plugins==9.3.3
-snakemake-interface-report-plugins==1.1.0
-snakemake-interface-storage-plugins==3.3.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.5
-SQLAlchemy==2.0.27
+rpds-py==0.23.1
+ruamel.yaml @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_a0tb7e252p/croot/ruamel.yaml_1727980165152/work
+ruamel.yaml.clib @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_47oq900ogu/croot/ruamel.yaml.clib_1727769824325/work
+scikit-learn==1.6.0
+scipy==1.14.1
+Send2Trash==1.8.3
+setuptools==75.1.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.6
 stack-data==0.6.3
-starlette==0.36.3
 swiglpk==5.0.12
-sympy==1.12
-tabulate==0.9.0
-tenacity==8.2.3
-terminado==0.18.0
-threadpoolctl==3.6.0
-throttler==1.2.2
-tiktoken==0.6.0
+sympy==1.13.3
+terminado==0.18.1
+threadpoolctl==3.5.0
 tinycss2==1.4.0
-tinyhtml5==2.0.0
-tokenizers==0.15.2
-toml==0.10.2
-tornado==6.4
-tqdm==4.66.2
-traitlets==5.14.1
-trio==0.24.0
-trio-websocket==0.11.1
-typer==0.9.0
-types-python-dateutil==2.8.19.20240311
-typing-inspect==0.9.0
-typing_extensions==4.9.0
-tzdata==2024.1
-unstructured==0.12.6
-unstructured-client==0.18.0
+tornado==6.4.2
+tqdm @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_5akmb2c3eu/croot/tqdm_1724853941623/work
+traitlets==5.14.3
+truststore @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/truststore_1701811390284/work
+types-python-dateutil==2.9.0.20241206
+typing_extensions==4.12.2
+tzdata==2024.2
 uri-template==1.3.0
-uritemplate==4.1.1
-urllib3==1.26.18
-uvicorn==0.28.0
-uvloop==0.19.0
-watchfiles==0.21.0
+urllib3 @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_7dvsr0a5y0/croot/urllib3_1727769823716/work
 wcwidth==0.2.13
-weasyprint==65.1
-webcolors==1.13
+webcolors==24.11.1
 webencodings==0.5.1
-websocket-client==1.7.0
-websockets==12.0
+websocket-client==1.8.0
 Werkzeug==3.1.3
+wheel==0.44.0
 widgetsnbextension==3.6.10
-wrapt==1.16.0
-wsproto==1.2.0
-yarl==1.9.4
-yte==1.7.0
-zipp==3.17.0
-zopfli==0.2.3.post1
+zstandard @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_65utj9q8ya/croot/zstandard_1731360545821/work
